--- a/index.html
+++ b/index.html
@@ -10,17 +10,40 @@
     <title class=".timer"></title>
 
 </head>
-    <body class="flex-box">
+    <body>
     
+        <header class="top-image">
+            <img src="imgs/top-image.svg" alt="Top-image">
+        </header>
         <main class="flex-box-timer">
             <div class="div-timer">
 
-                <h1 class="title-timer">COUNTDOWN TO FRIDAY...</h1>
+                <h1>Ready to launch in...</h1>
 
-                <p class="timer"></p>
+                <div class="div-timer-div">
+
+                    <span>Dias</span>
+                    <span>Horas</span>
+                    <span>Minutos</span>
+                    <span>Segundos</span>
+                    <p id="timer"></p>
+
+                </div>
+                
+
+                <p>
+                    Inscreva-se para saber mais sobre o lançamento
+                </p>
+
+                <span class="button">
+                    <button>Inscreva-se</button>
+                </span>
 
             </div>
         </main>
+        <footer class="bottom-image">
+            <img src="imgs/bottom-image.svg" alt="Bottom-image">
+        </footer>
 
     </body>
 </html>
